pir/parser/pirParser.py
# Generated from pir/parser/pir.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class pirParser ( Parser ):

    grammarFileName = "pir.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "':'", "'='", "'('", "')'", "'Boolean'", 
                     "'Integer'", "'Float'", "'Char'", "'ahoy'", "'{'", 
                     "'}'", "'class'", "'while'", "'for'", "'in'", "'switch'", 
                     "'case'", "'else'", "'if'", "'>'", "'<'", "'>='", "'<='", 
                     "'=='", "'!='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", "'/'", 
                     "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IntegerLiteral", 
                      "FloatLiteral", "CharLiteral", "BooleanLiteral", "GeneralLiteral", 
                      "AdditionOperator", "SubtractionOperator", "MultiplicationOperator", 
                      "DivisionOperator", "NewLine", "ClassIdentifier", 
                      "Identifier", "Comment", "WS" ]

    RULE_start = 0
    RULE_generalArgument = 1
    RULE_generalArguments = 2
    RULE_typedArguments = 3
    RULE_classAssignment = 4
    RULE_booleanAssignment = 5
    RULE_integerAssignment = 6
    RULE_floatAssignment = 7
    RULE_charAssignment = 8
    RULE_booleanType = 9
    RULE_integerType = 10
    RULE_floatType = 11
    RULE_charType = 12
    RULE_numberType = 13
    RULE_genericType = 14
    RULE_functionKeyword = 15
    RULE_functionName = 16
    RULE_functionDeclaration = 17
    RULE_functionInvocation = 18
    RULE_classDeclaration = 19
    RULE_classConstructor = 20
    RULE_simpleClassDeclaration = 21
    RULE_completeClassDeclaration = 22
    RULE_typeDeclaration = 23
    RULE_generalDeclaration = 24
    RULE_generalInvocation = 25
    RULE_generalExpression = 26
    RULE_loopExpression = 27
    RULE_whileExpression = 28
    RULE_forExpression = 29
    RULE_controlExpression = 30
    RULE_switchCaseExpression = 31
    RULE_switchCaseBody = 32
    RULE_switchCaseCaseBranch = 33
    RULE_switchCaseElseBranch = 34
    RULE_ifExpression = 35
    RULE_elseExpression = 36
    RULE_comparisonExpression = 37
    RULE_comparisonOperand = 38
    RULE_comparisonOperator = 39
    RULE_algebraicExpression = 40
    RULE_integerAlgebraicExpression = 41
    RULE_integerMultiplicationExpression = 42
    RULE_integerSummationExpression = 43
    RULE_floatAlgebraicExpression = 44
    RULE_floatMultiplicationExpression = 45
    RULE_floatSummationExpression = 46
    RULE_generalAssignment = 47
    RULE_baseParameter = 48

    ruleNames =  [ "start", "generalArgument", "generalArguments", "typedArguments", 
                   "classAssignment", "booleanAssignment", "integerAssignment", 
                   "floatAssignment", "charAssignment", "booleanType", "integerType", 
                   "floatType", "charType", "numberType", "genericType", 
                   "functionKeyword", "functionName", "functionDeclaration", 
                   "functionInvocation", "classDeclaration", "classConstructor", 
                   "simpleClassDeclaration", "completeClassDeclaration", 
                   "typeDeclaration", "generalDeclaration", "generalInvocation", 
                   "generalExpression", "loopExpression", "whileExpression", 
                   "forExpression", "controlExpression", "switchCaseExpression", 
                   "switchCaseBody", "switchCaseCaseBranch", "switchCaseElseBranch", 
                   "ifExpression", "elseExpression", "comparisonExpression", 
                   "comparisonOperand", "comparisonOperator", "algebraicExpression", 
                   "integerAlgebraicExpression", "integerMultiplicationExpression", 
                   "integerSummationExpression", "floatAlgebraicExpression", 
                   "floatMultiplicationExpression", "floatSummationExpression", 
                   "generalAssignment", "baseParameter" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    IntegerLiteral=27
    FloatLiteral=28
    CharLiteral=29
    BooleanLiteral=30
    GeneralLiteral=31
    AdditionOperator=32
    SubtractionOperator=33
    MultiplicationOperator=34
    DivisionOperator=35
    NewLine=36
    ClassIdentifier=37
    Identifier=38
    Comment=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(pirParser.EOF, 0)

        def generalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pirParser.GeneralDeclarationContext)
            else:
                return self.getTypedRuleContext(pirParser.GeneralDeclarationContext,i)


        def getRuleIndex(self):
            return pirParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = pirParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pirParser.T__3) | (1 << pirParser.T__9) | (1 << pirParser.T__12) | (1 << pirParser.T__13) | (1 << pirParser.T__14) | (1 << pirParser.T__16) | (1 << pirParser.T__19) | (1 << pirParser.IntegerLiteral) | (1 << pirParser.FloatLiteral) | (1 << pirParser.NewLine) | (1 << pirParser.Identifier) | (1 << pirParser.Comment))) != 0):
                self.state = 98
                self.generalDeclaration()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(pirParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GeneralArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(pirParser.Identifier, 0)

        def BooleanLiteral(self):
            return self.getToken(pirParser.BooleanLiteral, 0)

        def CharLiteral(self):
            return self.getToken(pirParser.CharLiteral, 0)

        def FloatLiteral(self):
            return self.getToken(pirParser.FloatLiteral, 0)

        def IntegerLiteral(self):
            return self.getToken(pirParser.IntegerLiteral, 0)

        def getRuleIndex(self):
            return pirParser.RULE_generalArgument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGeneralArgument" ):
                return visitor.visitGeneralArgument(self)
            else:
                return visitor.visitChildren(self)




    def generalArgument(self):

        localctx = pirParser.GeneralArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_generalArgument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pirParser.IntegerLiteral) | (1 << pirParser.FloatLiteral) | (1 << pirParser.CharLiteral) | (1 << pirParser.BooleanLiteral) | (1 << pirParser.Identifier))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GeneralArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def generalArgument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pirParser.GeneralArgumentContext)
            else:
                return self.getTypedRuleContext(pirParser.GeneralArgumentContext,i)


        def getRuleIndex(self):
            return pirParser.RULE_generalArguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGeneralArguments" ):
                return visitor.visitGeneralArguments(self)
            else:
                return visitor.visitChildren(self)




    def generalArguments(self):

        localctx = pirParser.GeneralArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_generalArguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.generalArgument()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pirParser.T__0:
                self.state = 109
                self.match(pirParser.T__0)
                self.state = 110
                self.generalArgument()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pirParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(pirParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return pirParser.RULE_typedArguments

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedArguments" ):
                return visitor.visitTypedArguments(self)
            else:
                return visitor.visitChildren(self)




    def typedArguments(self):

        localctx = pirParser.TypedArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typedArguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.typeDeclaration()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pirParser.T__0:
                self.state = 117
                self.match(pirParser.T__0)
                self.state = 118
                self.typeDeclaration()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(pirParser.Identifier, 0)

        def ClassIdentifier(self, i:int=None):
            if i is None:
                return self.getTokens(pirParser.ClassIdentifier)
            else:
                return self.getToken(pirParser.ClassIdentifier, i)

        def generalArguments(self):
            return self.getTypedRuleContext(pirParser.GeneralArgumentsContext,0)


        def getRuleIndex(self):
            return pirParser.RULE_classAssignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassAssignment" ):
                return visitor.visitClassAssignment(self)
            else:
                return visitor.visitChildren(self)




    def classAssignment(self):

        localctx = pirParser.ClassAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classAssignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(pirParser.Identifier)
            self.state = 125
            self.match(pirParser.T__1)
            self.state = 126
            self.match(pirParser.ClassIdentifier)
            self.state = 127
            self.match(pirParser.T__2)
            self.state = 128
            self.match(pirParser.ClassIdentifier)
            self.state = 129
            self.match(pirParser.T__3)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pirParser.IntegerLiteral) | (1 << pirParser.FloatLiteral) | (1 << pirParser.CharLiteral) | (1 << pirParser.BooleanLiteral) | (1 << pirParser.Identifier))) != 0):
                self.state = 130
                self.generalArguments()


            self.state = 133
            self.match(pirParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(pirParser.Identifier)
            else:
                return self.getToken(pirParser.Identifier, i)

        def booleanType(self):
            return self.getTypedRuleContext(pirParser.BooleanTypeContext,0)


        def BooleanLiteral(self):
            return self.getToken(pirParser.BooleanLiteral, 0)

        def getRuleIndex(self):
            return pirParser.RULE_booleanAssignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanAssignment" ):
                return visitor.visitBooleanAssignment(self)
            else:
                return visitor.visitChildren(self)




    def booleanAssignment(self):

        localctx = pirParser.BooleanAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_booleanAssignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(pirParser.Identifier)
            self.state = 136
            self.match(pirParser.T__1)
            self.state = 137
            self.booleanType()
            self.state = 138
            self.match(pirParser.T__2)
            self.state = 139
            _la = self._input.LA(1)
            if not(_la==pirParser.BooleanLiteral or _la==pirParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(pirParser.Identifier)
            else:
                return self.getToken(pirParser.Identifier, i)

        def integerType(self):
            return self.getTypedRuleContext(pirParser.IntegerTypeContext,0)


        def integerAlgebraicExpression(self):
            return self.getTypedRuleContext(pirParser.IntegerAlgebraicExpressionContext,0)


        def IntegerLiteral(self):
            return self.getToken(pirParser.IntegerLiteral, 0)

        def getRuleIndex(self):
            return pirParser.RULE_integerAssignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntegerAssignment" ):
                return visitor.visitIntegerAssignment(self)
            else:
                return visitor.visitChildren(self)




    def integerAssignment(self):

        localctx = pirParser.IntegerAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_integerAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(pirParser.Identifier)
            self.state = 142
            self.match(pirParser.T__1)
            self.state = 143
            self.integerType()
            self.state = 144
            self.match(pirParser.T__2)
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 145
                self.integerAlgebraicExpression()
                pass

            elif la_ == 2:
                self.state = 146
                self.match(pirParser.IntegerLiteral)
                pass

            elif la_ == 3:
                self.state = 147
                self.match(pirParser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(pirParser.Identifier)
            else:
                return self.getToken(pirParser.Identifier, i)

        def floatType(self):
            return self.getTypedRuleContext(pirParser.FloatTypeContext,0)


        def floatAlgebraicExpression(self):
            return self.getTypedRuleContext(pirParser.FloatAlgebraicExpressionContext,0)


        def FloatLiteral(self):
            return self.getToken(pirParser.FloatLiteral, 0)

        def getRuleIndex(self):
            return pirParser.RULE_floatAssignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatAssignment" ):
                return visitor.visitFloatAssignment(self)
            else:
                return visitor.visitChildren(self)




    def floatAssignment(self):

        localctx = pirParser.FloatAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_floatAssignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(pirParser.Identifier)
            self.state = 151
            self.match(pirParser.T__1)
            self.state = 152
            self.floatType()
            self.state = 153
            self.match(pirParser.T__2)
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 154
                self.floatAlgebraicExpression()
                pass

            elif la_ == 2:
                self.state = 155
                self.match(pirParser.FloatLiteral)
                pass

            elif la_ == 3:
                self.state = 156
                self.match(pirParser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(pirParser.Identifier)
            else:
                return self.getToken(pirParser.Identifier, i)

        def charType(self):
            return self.getTypedRuleContext(pirParser.CharTypeContext,0)


        def CharLiteral(self):
            return self.getToken(pirParser.CharLiteral, 0)

        def getRuleIndex(self):
            return pirParser.RULE_charAssignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharAssignment" ):
                return visitor.visitCharAssignment(self)
            else:
                return visitor.visitChildren(self)




    def charAssignment(self):

        localctx = pirParser.CharAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_charAssignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(pirParser.Identifier)
            self.state = 160
            self.match(pirParser.T__1)
            self.state = 161
            self.charType()
            self.state = 162
            self.match(pirParser.T__2)
            self.state = 163
            _la = self._input.LA(1)
            if not(_la==pirParser.CharLiteral or _la==pirParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleanTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pirParser.RULE_booleanType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanType" ):
                return visitor.visitBooleanType(self)
            else:
                return visitor.visitChildren(self)




    def booleanType(self):

        localctx = pirParser.BooleanTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_booleanType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(pirParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pirParser.RULE_integerType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntegerType" ):
                return visitor.visitIntegerType(self)
            else:
                return visitor.visitChildren(self)




    def integerType(self):

        localctx = pirParser.IntegerTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_integerType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(pirParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloatTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pirParser.RULE_floatType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloatType" ):
                return visitor.visitFloatType(self)
            else:
                return visitor.visitChildren(self)




    def floatType(self):

        localctx = pirParser.FloatTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_floatType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(pirParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CharTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pirParser.RULE_charType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCharType" ):
                return visitor.visitCharType(self)
            else:
                return visitor.visitChildren(self)




    def charType(self):

        localctx = pirParser.CharTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_charType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(pirParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integerType(self):
            return self.getTypedRuleContext(pirParser.IntegerTypeContext,0)


        def floatType(self):
            return self.getTypedRuleContext(pirParser.FloatTypeContext,0)


        def getRuleIndex(self):
            return pirParser.RULE_numberType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberType" ):
                return visitor.visitNumberType(self)
            else:
                return visitor.visitChildren(self)




    def numberType(self):

        localctx = pirParser.NumberTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_numberType)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pirParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.integerType()
                pass
            elif token in [pirParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.floatType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GenericTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booleanType(self):
            return self.getTypedRuleContext(pirParser.BooleanTypeContext,0)


        def integerType(self):
            return self.getTypedRuleContext(pirParser.IntegerTypeContext,0)


        def floatType(self):
            return self.getTypedRuleContext(pirParser.FloatTypeContext,0)


        def charType(self):
            return self.getTypedRuleContext(pirParser.CharTypeContext,0)


        def getRuleIndex(self):
            return pirParser.RULE_genericType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGenericType" ):
                return visitor.visitGenericType(self)
            else:
                return visitor.visitChildren(self)




    def genericType(self):

        localctx = pirParser.GenericTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_genericType)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pirParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.booleanType()
                pass
            elif token in [pirParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.integerType()
                pass
            elif token in [pirParser.T__7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.floatType()
                pass
            elif token in [pirParser.T__8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 180
                self.charType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionKeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

